# sentiment-analyzer-backend

./: .gitignore  README.md  main.py  pyproject.toml
app/: database.py
configs/: config.py  logger_config.py
helpers/: utils.py
routers/: analysis.py  comparison.py  mentions.py  recommender.py
