[tool.poetry]
name = "sentiment-analyzer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.75.2"
psycopg2-binary = "^2.9.10"
pandas = "^2.3.1"
uvicorn = "0.17.6"
sqlalchemy = "^2.0.43"
redshift-connector = "^2.1.8"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
